# ArrayTransformer

./: .gitignore  CMakeLists.txt  data.txt  main.cpp  setup.sh
core/: CMakeLists.txt
core/include/core/: array_transformer.h  intersection_transformer.h  sorting_transformer.h  transformer_factory.h  types.h  unique_reverse_transformer.h
tests/: CMakeLists.txt  array_transformer_test.cpp
utils/: CMakeLists.txt
utils/include/utils/: parser.h  printer.h
